--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,59 @@
 .hidden {
     display: none;
 }
+
+body {
+    background-color: black;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+body img {
+    position: static;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+}
+
+.contents {
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 100px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contents #clock {
+    font-size: 100px;
+    color: palegoldenrod;
+}
+
+.contents #greeting {
+    font-size: 80px;
+    color: palegoldenrod;
+}
+
+.contents_todo {
+    background-color: goldenrod;
+}
+
+.contents_todo #todo-form input{
+    width: 400px;
+    height: 30px;
+    font-size: x-large;
+}
+
+.contents_todo #todo-list {
+    font-size: x-large;
+    color: white;
+}
+
+.contents #quote {
+    color : palegoldenrod;
+    font-size : 30px;
+    margin-top: 20px;
+}
